--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 :root {
+    --primary-blue: #CCD1E5;
     --primary-color: #EFDFDF;
     --secondary-color: #F4F2E9;
     --tertiary-color: #E0E5D8;
@@ -160,6 +161,25 @@ hr {
     background: url("../images/beige_tiles.png");
 }
 
+.product-header {
+    background-image: url("../images/product-2_img-2.jpg");
+    background-size: cover;
+    background-position-y: 75%;
+    height: 750px;
+    margin-bottom: 2rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
+    color: white;
+    border-radius: 5px;
+}
+
+.product-header_text {
+    background: linear-gradient(to top, #000 50%, transparent);
+    padding: 5rem 2rem 1rem;
+    border-radius: 0 0 5px 5px;
+}
+
 .sub-heading {
     font-size: 22px;
 }
@@ -167,6 +187,7 @@ hr {
 .product-container {
     display: flex;
     flex-direction: column;
+    margin: auto;
     gap: 1rem;
     max-width: 650px;
 }
@@ -179,9 +200,9 @@ hr {
 }
 
 .product img {
-    width: 50%;
-    max-height: 250px;
-    object-fit: cover;
+    max-width: 200px;
+    object-fit: contain;
+    border-radius: 10px;
 }
 
 @media (max-width: 680px) {
