--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
     --secondary-color: #F4F2E9;
     --tertiary-color: #E0E5D8;
     --accent-color: #704747;
+    --text-color: #333333;
 }
 
 * {
@@ -122,14 +123,15 @@ hr {
 }
 
 .cta {
+    background: url("../images/halftone.png");
     font-size: 20px;
     width: 160px;
     margin: 1rem auto 0;
     padding: .8rem 1.5rem;
-    border: 1px solid var(--accent-color);
-    box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
-    background: url("../images/halftone.png");
     color: var(--accent-color);
+    border: 1px solid var(--accent-color);
+    border-radius: 5px;
+    box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
 }
 
 .cta:hover {
@@ -161,23 +163,27 @@ hr {
     background: url("../images/beige_tiles.png");
 }
 
+/* ------ Products page ------ */
+
 .product-header {
-    background-image: url("../images/product-2_img-2.jpg");
-    background-size: cover;
-    background-position-y: 75%;
-    height: 750px;
-    margin-bottom: 2rem;
     display: flex;
     flex-direction: column;
-    justify-content: end;
-    color: white;
-    border-radius: 5px;
 }
 
-.product-header_text {
-    background: linear-gradient(to top, #000 50%, transparent);
-    padding: 5rem 2rem 1rem;
-    border-radius: 0 0 5px 5px;
+.product-header img {
+    width: 100%;
+    height: 620px;
+    object-fit: cover;
+    object-position: 100% 55%;
+
+    filter: sepia(33%) saturate(80%);
+}
+
+.product-header_text{
+    background-color: var(--secondary-color);
+    color: var(--accent-color);
+    padding: 1rem;
+    margin: 0 0 1rem;
 }
 
 .sub-heading {
@@ -194,16 +200,63 @@ hr {
 
 .product {
     display: flex;
-    justify-content: space-between;
-    border: 1px solid black;
+    gap: 1rem;
+    background-color: white;
+    border-radius: 2px;
     padding: 1rem;
+}
+
+.product-details {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.product-details p {
+    margin-bottom: 1rem;
+}
+
+.product-price {
+    font-size: 1.25rem;
+}
+
+.product-buttons {
+    display: flex;
+    gap: 1rem;
+}
+
+.product-buttons button {
+    border: none;
+    height: 50px;
+    border-radius: 3px;
+}
+
+.product-buttons button:hover {
+    cursor: pointer;
+}
+
+.product-buttons img {
+    width: 100%;
+    height: 100%;
+}
+
+.btn-purchase {
+    background-color: var(--primary-blue);
+    width: 200px;
+}
+
+.btn-wishlist {
+    background-color: var(--primary-color);
+    width: 100px;
 }
 
 .product img {
     max-width: 200px;
     object-fit: contain;
-    border-radius: 10px;
+    border-radius: 2px;
 }
+
+/* ------ Media queries ------ */
 
 @media (max-width: 680px) {
     h2 {
@@ -216,6 +269,24 @@ hr {
 
     .categories {
         flex-direction: column;
+    }
+}
+
+@media (max-width: 598px) {
+    .product {
+        flex-direction: column;
+    }
+
+    .product img {
+        order: 1;
+        min-width: 70%;
+        margin: auto;
+    }
+
+    .product-details {
+        order: 2;
+        border-top: 1px solid var(--primary-color);
+        padding-top: 1rem;
     }
 }
 
