--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,21 @@
 @font-face {
-    font-family: "Source Sans";
-    src: url("../fonts/SourceSans3-VariableFont_wght.ttf") format("truetype");
+    font-family: "Heading";
+    src: url("../fonts/CrimsonPro-VariableFont_wght.ttf") format("truetype");
 }
 
 @font-face {
-    font-family: "Montserrat";
-    src: url("../fonts/Montserrat-VariableFont_wght.ttf") format("truetype");
+    font-family: "Text";
+    src: url("../fonts/SourceSerif4-VariableFont_opsz\,wght.ttf") format("truetype");
 }
 
 @font-face {
-    font-family: "Raleway";
-    src: url("../fonts/Raleway-VariableFont_wght.ttf") format("truetype");
+    font-family: "Text Italic";
+    src: url("../fonts/SourceSerif4-Italic-VariableFont_opsz\,wght.ttf") format("truetype");
+}
+
+@font-face {
+    font-family: "Accent";
+    src: url("../fonts/Nunito-VariableFont_wght.ttf") format("truetype");
 }
 
 :root {
@@ -19,6 +24,7 @@
     --secondary-color: #F4F2E9;
     --tertiary-color: #E0E5D8;
     --accent-color: #704747;
+    --accent-transparent: #70474760;
     --text-color: #333333;
 }
 
@@ -35,7 +41,7 @@ body {
     display: flex;
     flex-direction: column;
     margin: 0;
-    font-family: "Source Sans", sans-serif;
+    font-family: "Text", Georgia, serif;
     background: url("../images/pink_rice.png");
     color: var(--accent-color);
     overflow-x: hidden;
@@ -45,7 +51,6 @@ main {
     max-width: 1000px;
     width: 100%;
     margin: 0 auto;
-    padding: 0 1rem;
     flex: 1 0 auto;
     padding-bottom: 5rem;
     background-color: white;
@@ -71,13 +76,39 @@ a {
     text-decoration: none;
 }
 
-nav {
+header {
     display: flex;
-    justify-content: end;
-    padding: .6rem 0;
+    justify-content: space-between;
+    align-items: center;
     background-color: var(--secondary-color);
     box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.1);
-    z-index: 1;
+    z-index: 2;
+}
+
+.logo {
+    display: flex;
+    justify-content: center;
+    background-color: var(--accent-transparent);
+    padding: 0 1.5rem;
+    height: 50px;
+}
+
+.logo a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: .5rem;
+}
+
+.logo p {
+    font-family: "Heading";
+    font-size: 3rem;
+    margin-top: .6rem;
+}
+
+.logo img {
+    width: 32px;
+    height: 32px;
 }
 
 nav a {
@@ -91,20 +122,19 @@ nav a:hover {
 h1, h2, h3 {
     font-weight: 200;
     margin: 0;
-    font-family: "Montserrat", sans-serif;
+    font-family: "Heading", Georgia, serif;
 }
 
 h1 {
-    font-size: 7rem;
+    font-size: 5rem;
 }
 
 h2 {
-    font-size: 3.5rem;
+    font-size: 2.5rem;
 }
 
 h3 {
     font-size: 2rem;
-    font-weight: 400;
 }
 
 p {
@@ -122,33 +152,53 @@ hr {
     font-weight: 400;
 }
 
-.logo {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: .5rem;
-    margin: 6rem auto;
-}
-
-.logo img {
-    width: 48px;
-    height: 48px;
-}
-
-.text-content {
+.text-container {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    max-width: 650px;
-    margin: 0 auto 3rem;
+    margin: 5rem auto 3rem;
 }
 
-.text-content p:first-of-type {
+.text-container h1 {
+    margin: auto;
+}
+
+.text-content {
+    margin: 0 auto 1rem;
+}
+
+.text-content p {
+    max-width: 500px;
+    letter-spacing: .8px;
     margin-top: 1rem;
 }
 
+.quote {
+    margin: 0 auto 5rem;
+    max-width: 550px;
+    padding: 0 1rem 1rem;
+    border-left: 3px solid var(--accent-transparent);
+    border-radius: 0 5px 5px 0;
+    background-color: var(--secondary-color);
+}
+
+blockquote {
+    font-size: 18px;
+    text-indent: -0.7em;
+    line-height: 1.1;
+}
+
+q {
+    font-family: "Text Italic";
+}
+
+q::before, q::after {
+    color: var(--accent-transparent);
+    font-size: 21px;
+}
+
 .cta-button {
-    font-family: "Raleway", sans-serif;
+    font-family: "Accent", sans-serif;
 }
 
 .products-link {
@@ -235,8 +285,8 @@ hr {
 }
 
 .sub-heading {
-    font-size: 21px;
-    font-weight: 300;
+    font-size: 18px;
+    font-weight: 400;
     max-width: 400px;
 }
 
@@ -311,26 +361,18 @@ hr {
 /* ------ Media queries ------ */
 
 @media (max-width: 1200px) {
-    main {
-        background: url("../images/pink_rice.png");
-    }
-
-    .text-content {
+    .text-container {
         background-color: white;
-        padding: 6rem 2rem;
-    }
-
-    .text-content h2 {
-        text-align: center;
+        padding: 0 1rem;
     }
 }
 
 @media (max-width: 680px) {
-    h2 {
-        font-size: 3rem;
+    .text-content h2 {
+        margin-top: 2rem;
     }
 
-    .text-content {
+    .text-container {
         margin: 4rem 0;
     }
 
@@ -383,11 +425,10 @@ hr {
 
     h2 {
         font-size: 2.5rem;
-        text-align: center;
     }
 
-    .logo img {
+    /* .logo img {
         width: 40px;
         height: 40px;
-    }
+    } */
 }
