--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@
 
 @font-face {
     font-family: "Accent";
-    src: url("../fonts/Nunito-VariableFont_wght.ttf") format("truetype");
+    src: url("../fonts/OpenSans-VariableFont_wdth\,wght.ttf") format("truetype");
 }
 
 :root {
@@ -90,7 +90,7 @@ header {
     justify-content: center;
     background-color: var(--accent-transparent);
     padding: 0 1.5rem;
-    height: 50px;
+    height: 60px;
 }
 
 .logo a {
@@ -111,15 +111,75 @@ header {
     height: 32px;
 }
 
-nav a {
-    margin-right: 2rem;
+/* --------- Navigation --------- */
+
+.menu-icon {
+    display: none;
 }
 
-nav a:hover {
+.menu {
+    display: flex;
+    list-style: none;
+    margin: 0 1.5rem;
+    padding: 0;
+    justify-content: flex-end;
+}
+
+.menu ul {
+    display: flex;
+}
+
+.menu li {
+    margin: 0 10px;
+    list-style: none;
+}
+
+.menu a {
+    text-decoration: none;
+}
+
+.menu a:hover {
     text-decoration: underline;
 }
 
-h1, h2, h3 {
+#menu-toggle {
+    display: none;
+}
+
+@media (max-width: 768px) {
+    .menu-icon {
+        display: block;
+        font-size: 32px;
+        cursor: pointer;
+        float: right;
+        margin-right: 1rem;
+    }
+
+    .menu {
+        display: none;
+        position: absolute;
+        top: 60px;
+        right: -24px;
+        padding: 2rem;
+        width: 100%;
+        background-color: var(--secondary-color);
+        box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.1);
+    }
+
+    .menu ul {
+        flex-direction: column;
+        text-align: center;
+        gap: 3rem;
+    }
+
+    #menu-toggle:checked + .menu-icon + .menu {
+        display: block;
+    }
+}
+
+/* --------------------------------- */
+
+h1, h2, h3, h4 {
     font-weight: 200;
     margin: 0;
     font-family: "Heading", Georgia, serif;
@@ -137,6 +197,11 @@ h3 {
     font-size: 2rem;
 }
 
+h4 {
+    font-size: 1.5rem;
+    font-weight: 600;
+}
+
 p {
     margin: 0 0 1rem;
 }
@@ -146,6 +211,10 @@ hr {
     border-width: 0;
     max-width: 650px;
     background-color: var(--accent-color);
+}
+
+.cta-button {
+    font-family: "Accent", sans-serif;
 }
 
 .heading-style {
@@ -170,47 +239,43 @@ hr {
 .text-content p {
     max-width: 500px;
     letter-spacing: .8px;
-    margin-top: 1rem;
+    margin-top: .66rem;
 }
 
-.quote {
-    margin: 0 auto 5rem;
-    max-width: 550px;
-    padding: 0 1rem 1rem;
-    border-left: 3px solid var(--accent-transparent);
-    border-radius: 0 5px 5px 0;
-    background-color: var(--secondary-color);
+.products-info {
+    display: flex;
+    gap: 2rem;
+    max-width: 850px;
+    margin: 2rem auto 0;
 }
 
-blockquote {
+.products-info_text {
+    max-width: 500px;
+    margin: 0 auto 1rem;
+}
+
+.products-info_text p {
+    margin-top: .66rem;
+}
+
+.products-info_btn {
+    display: flex;
+    flex-direction: column;
+    margin: auto;
+}
+
+.products-info_btn p {
+    margin: .3rem auto;
     font-size: 18px;
-    text-indent: -0.7em;
-    line-height: 1.1;
-}
-
-q {
-    font-family: "Text Italic";
-}
-
-q::before, q::after {
-    color: var(--accent-transparent);
-    font-size: 21px;
-}
-
-.cta-button {
     font-family: "Accent", sans-serif;
 }
 
 .products-link {
-    display: flex;
-    justify-content: center;
     font-weight: 500;
     font-size: 21px;
-    margin: 2.5rem auto 0;
-    width: 200px;
     border: 1px solid var(--primary-color);
     border-radius: 2px;
-    padding: .8rem 0;
+    padding: 1rem 6rem;
     background-color: var(--primary-color);
     box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
     transition: 0.2s;
@@ -218,6 +283,11 @@ q::before, q::after {
 
 .products-link:hover {
     border: 1px solid var(--accent-color);
+}
+
+.categories-text {
+    max-width: 500px;
+    margin: auto;
 }
 
 .categories {
@@ -244,6 +314,30 @@ q::before, q::after {
 
 .cat-3 {
     background: url("../images/beige_tiles.png");
+}
+
+.quote {
+    margin: 3rem auto 0;
+    max-width: 550px;
+    padding: .5rem 1rem 1.5rem;
+    border-left: 3px solid var(--accent-transparent);
+    border-radius: 0 5px 5px 0;
+    background-color: var(--secondary-color);
+}
+
+blockquote {
+    font-size: 18px;
+    text-indent: -0.7em;
+    line-height: 1.1;
+}
+
+q {
+    font-family: "Text Italic";
+}
+
+q::before, q::after {
+    color: var(--accent-transparent);
+    font-size: 21px;
 }
 
 /* ------ Products page ------ */
@@ -368,6 +462,10 @@ q::before, q::after {
 }
 
 @media (max-width: 680px) {
+    .text-container h2, .text-container h3 {
+        max-width: 500px;
+    }
+    
     .text-content h2 {
         margin-top: 2rem;
     }
@@ -376,11 +474,7 @@ q::before, q::after {
         margin: 4rem 0;
     }
 
-    .categories {
-        flex-direction: column;
-    }
-
-    .product-header {
+    .products-info, .categories, .product-header {
         flex-direction: column;
     }
 
